UI: Adjust z-index for floating whatsapp to resolve overlapping issues

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -770,7 +770,7 @@ header {
     position: fixed;
     bottom: calc(85px + env(safe-area-inset-bottom, 0px)); // Move higher to clear mobile boat nav
     right: 15px;
-    z-index: 10001; 
+    z-index: 1000; 
     
     @media (max-width: 1023px) {
         display: none;
